--- a/pick-up-proj/public/src/index.html
+++ b/pick-up-proj/public/src/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Freelancer - Start Bootstrap Theme</title>
+  <title>SPORTSUP</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Theme CSS -->
+  
   <link href="assets/css/freelancer.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 
@@ -34,13 +35,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#">Chat Room</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Search</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -77,13 +78,17 @@
       </div>
     </div>
   </header>
-
+  <!--Search Bar-->
+  <div class="text-center mt-4" style="background-color: black; width: 500px; margin-left: 250px; border-radius: 5%">
+    <input type="search" name="q" placeholder="search..."/>
+    <button class="btn btn-outline-light">Groups</button><button class="btn btn-outline-light">Calendar</button>
+  </div>
   <!-- Portfolio Section -->
   <section class="page-section portfolio" id="portfolio">
     <div class="container">
 
       <!-- Portfolio Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Categories</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom">
@@ -105,7 +110,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" alt="">
+            <img class="img-fluid" src="#" alt="">
           </div>
         </div>
 
@@ -117,7 +122,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" alt="">
+            <img class="img-fluid" src="#" alt="">
           </div>
         </div>
 
@@ -129,7 +134,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" alt="">
+            <img class="img-fluid" src="#" alt="">
           </div>
         </div>
 
@@ -141,7 +146,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" alt="">
+            <img class="img-fluid" src="#" alt="">
           </div>
         </div>
 
